src/objects/pse__Billing_Event_Item__c.object
<CustomObject>
    <customHelpPage>pse__BillingEventItemHelp</customHelpPage>
    <description>Contains simplified, potentially summarized information for a billable record and often correspond with invoice line items in your financial system. Every billing event item must have a lookup relationship to either a budget, timecard split, expense, milestone, or miscellaneous adjustment. Grouped together into billing events.</description>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>PSA-CLD-USNONE-Unique identifier used by external systems</description>
        <formula>pse__Billing_Event__r.Project_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Unique identifier used by external systems</inlineHelpText>
        <label>Project Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event Batch</label>
        <referenceTo>pse__Billing_Event_Batch__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event Calculation</label>
        <referenceTo>pse__Billing_Event_Calculation__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Billing_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Event</label>
        <referenceTo>pse__Billing_Event__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Budget__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget</label>
        <referenceTo>pse__Budget__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expense</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
                <value>
                    <fullName>Timecard</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous Adjustment</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense</label>
        <referenceTo>pse__Expense__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Invoiced__c</fullName>
        <formula>IF(pse__Billing_Event__r.pse__Invoiced__c,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Invoiced</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Is_Released__c</fullName>
        <formula>IF(pse__Billing_Event__r.pse__Is_Released__c,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <label>Released</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone</label>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Miscellaneous_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Miscellaneous Adjustment</label>
        <referenceTo>pse__Miscellaneous_Adjustment__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Object_Id__c</fullName>
        <description>Id of the billable object that this item was generated from</description>
        <label>Object Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__ProductService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product or Service</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Rounded_Amount__c</fullName>
        <label>Rounded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Subcategory__c</fullName>
        <label>Subcategory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Summary__c</fullName>
        <description>Summary of Billing Event Item Description.</description>
        <formula>IF (ISPICKVAL(pse__Category__c, &quot;Expense&quot;),
		SUBSTITUTE(
			SUBSTITUTE(
				IF(ISBLANK(pse__Expense__r.pse__Description__c),
					$Label.pse__billingeventitemexpensesummarydescriptionwithnoexpensedescription,
					SUBSTITUTE($Label.pse__billingeventitemexpensesummarydescription, &apos;{2}&apos;, &apos;(&apos; + pse__Expense__r.pse__Description__c + &apos;)&apos;)
				), 
				&apos;{0}&apos;, 
				pse__Subcategory__c
			),
			&apos;{1}&apos;,
			TEXT (pse__Expense__r.pse__Expense_Date__c)
		)
		+ &quot; &quot; + pse__Expense__r.pse__Resource__r.FirstName + &quot; &quot; + pse__Expense__r.pse__Resource__r.LastName,
		IF (ISPICKVAL(pse__Category__c, &quot;Milestone&quot;),
			SUBSTITUTE(
				SUBSTITUTE(
					SUBSTITUTE($Label.pse__billingeventitemmilestonesummarydescription, &apos;{0}&apos;, TEXT( pse__Milestone__r.pse__Actual_Date__c)),
					&apos;{1}&apos;,
					TEXT ( pse__Milestone__r.pse__Milestone_Amount__c)
				),
				&apos;{2}&apos;,
				TEXT (pse__Milestone__r.CurrencyIsoCode)
			),
			pse__Description__c
		)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Summary of Billing Event Item Description.</inlineHelpText>
        <label>Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Timecard_Split__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timecard Split</label>
        <referenceTo>pse__Timecard__c</referenceTo>
        <relationshipLabel>Billing Event Items</relationshipLabel>
        <relationshipName>Billing_Event_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Billing Event Item</label>
    <nameField>
        <displayFormat>BEI-{YYYYMMDD}-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Event Items</pluralLabel>
    <recordTypes>
        <fullName>RDS_Billing_Event_Item</fullName>
        <active>true</active>
        <description>Billing Event Item for RDS</description>
        <label>RDS Billing Event Item</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>pse__PSE_Member_Share__c</fullName>
        <label>PSE Member Share</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>pse__PSE_PM_Share__c</fullName>
        <label>PSE PM Share</label>
    </sharingReasons>
</CustomObject>